{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 84,
  "lineage": "834dbd68-ef6a-bc08-a0fc-39c7def49ff8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "app-eip-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0342a37b6a275c6a0",
            "association_id": "eipassoc-0042bbbfcc51744cb",
            "domain": "vpc",
            "id": "eipalloc-0342a37b6a275c6a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-045763b14e5b445d9",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-34-201-234-137.compute-1.amazonaws.com",
            "public_ip": "34.201.234.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "app-eip-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e36f67bcae813800",
            "association_id": "eipassoc-0d693bc3f57b937e6",
            "domain": "vpc",
            "id": "eipalloc-0e36f67bcae813800",
            "network_border_group": "us-east-1",
            "network_interface": "eni-037703e2f252f2152",
            "private_dns": "ip-10-0-2-140.ec2.internal",
            "private_ip": "10.0.2.140",
            "public_dns": "ec2-100-24-204-72.compute-1.amazonaws.com",
            "public_ip": "100.24.204.72",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:internet-gateway/igw-083c01cdf57de4e49",
            "id": "igw-083c01cdf57de4e49",
            "owner_id": "507180652719",
            "tags": {
              "Name": "app-igw"
            },
            "tags_all": {
              "Name": "app-igw"
            },
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app-ngw-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0342a37b6a275c6a0",
            "connectivity_type": "public",
            "id": "nat-0d7455a4cf56d7f0a",
            "network_interface_id": "eni-045763b14e5b445d9",
            "private_ip": "10.0.1.28",
            "public_ip": "34.201.234.137",
            "subnet_id": "subnet-01a3bd4490ca27db4",
            "tags": {
              "Name": "app-ngw-az1"
            },
            "tags_all": {
              "Name": "app-ngw-az1"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc",
            "module.vpc.aws_eip.app-eip-az1",
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_subnet.app-subnet-public-az1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app-ngw-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e36f67bcae813800",
            "connectivity_type": "public",
            "id": "nat-0cb3757aa4fe315c1",
            "network_interface_id": "eni-037703e2f252f2152",
            "private_ip": "10.0.2.140",
            "public_ip": "100.24.204.72",
            "subnet_id": "subnet-0db4baaf139fb73b3",
            "tags": {
              "Name": "app-ngw-az2"
            },
            "tags_all": {
              "Name": "app-ngw-az2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.app-eip-az2",
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_subnet.app-subnet-public-az2",
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-rt-private-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:route-table/rtb-0215b47f67d89818c",
            "id": "rtb-0215b47f67d89818c",
            "owner_id": "507180652719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7455a4cf56d7f0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-rt-private-az1"
            },
            "tags_all": {
              "Name": "app-rt-private-az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.app-eip-az1",
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_nat_gateway.app-ngw-az1",
            "module.vpc.aws_subnet.app-subnet-public-az1",
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-rt-private-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:route-table/rtb-0e1274677cc836212",
            "id": "rtb-0e1274677cc836212",
            "owner_id": "507180652719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cb3757aa4fe315c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-rt-private-az2"
            },
            "tags_all": {
              "Name": "app-rt-private-az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_nat_gateway.app-ngw-az2",
            "module.vpc.aws_subnet.app-subnet-public-az2",
            "module.vpc.aws_vpc.app-vpc",
            "module.vpc.aws_eip.app-eip-az2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:route-table/rtb-0eb6226cc17676d72",
            "id": "rtb-0eb6226cc17676d72",
            "owner_id": "507180652719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083c01cdf57de4e49",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-rt-public"
            },
            "tags_all": {
              "Name": "app-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-rt-private-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b1e3e98387e5da5",
            "route_table_id": "rtb-0215b47f67d89818c",
            "subnet_id": "subnet-041f6418c2418d4c8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_nat_gateway.app-ngw-az1",
            "module.vpc.aws_route_table.app-rt-private-az1",
            "module.vpc.aws_subnet.app-subnet-private-az1",
            "module.vpc.aws_subnet.app-subnet-public-az1",
            "module.vpc.aws_vpc.app-vpc",
            "module.vpc.aws_eip.app-eip-az1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-rt-private-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b931fc98c371c60",
            "route_table_id": "rtb-0e1274677cc836212",
            "subnet_id": "subnet-06e23cc902b711d6c"
          },
          "dependencies": [
            "module.vpc.aws_eip.app-eip-az2",
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_nat_gateway.app-ngw-az2",
            "module.vpc.aws_route_table.app-rt-private-az2",
            "module.vpc.aws_subnet.app-subnet-private-az2",
            "module.vpc.aws_subnet.app-subnet-public-az2",
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-rt-public-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f65b2d3320857c9",
            "route_table_id": "rtb-0eb6226cc17676d72",
            "subnet_id": "subnet-01a3bd4490ca27db4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_route_table.app-rt-public",
            "module.vpc.aws_subnet.app-subnet-public-az1",
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-rt-public-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a45f7bdfcfe44a1",
            "route_table_id": "rtb-0eb6226cc17676d72",
            "subnet_id": "subnet-0db4baaf139fb73b3"
          },
          "dependencies": [
            "module.vpc.aws_subnet.app-subnet-public-az2",
            "module.vpc.aws_vpc.app-vpc",
            "module.vpc.aws_internet_gateway.app-igw",
            "module.vpc.aws_route_table.app-rt-public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:security-group/sg-0fc0f68147f1af075",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc0f68147f1af075",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TCP from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "app-tier-sg",
            "name_prefix": "",
            "owner_id": "507180652719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application LB to Web-Tier EC2 instances"
            },
            "tags_all": {
              "Name": "Application LB to Web-Tier EC2 instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:security-group/sg-0efa091d8cd249966",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efa091d8cd249966",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "TCP from AZ1 Private Subnet",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "TCP from AZ1 Private Subnet",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "507180652719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application LB to Web-Tier EC2 instances"
            },
            "tags_all": {
              "Name": "Application LB to Web-Tier EC2 instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.app-subnet-private-az1",
            "module.vpc.aws_subnet.app-subnet-private-az2",
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:security-group/sg-024bd656e30704cd2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024bd656e30704cd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-lb-sg",
            "name_prefix": "",
            "owner_id": "507180652719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internet to web LB"
            },
            "tags_all": {
              "Name": "Internet to web LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:security-group/sg-067f9bf1f3b8e2a0b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067f9bf1f3b8e2a0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-tier-sg",
            "name_prefix": "",
            "owner_id": "507180652719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application LB to Web-Tier EC2 instances"
            },
            "tags_all": {
              "Name": "Application LB to Web-Tier EC2 instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-private-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:subnet/subnet-041f6418c2418d4c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f6418c2418d4c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507180652719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-private-az1"
            },
            "tags_all": {
              "Name": "app-subnet-private-az1"
            },
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-private-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:subnet/subnet-06e23cc902b711d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e23cc902b711d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507180652719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-private-az2"
            },
            "tags_all": {
              "Name": "app-subnet-private-az2"
            },
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-public-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:subnet/subnet-01a3bd4490ca27db4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a3bd4490ca27db4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "507180652719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-public-az1"
            },
            "tags_all": {
              "Name": "app-subnet-public-az1"
            },
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-public-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:subnet/subnet-0db4baaf139fb73b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db4baaf139fb73b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "507180652719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-public-az2"
            },
            "tags_all": {
              "Name": "app-subnet-public-az2"
            },
            "vpc_id": "vpc-0e9099a6c22412c6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507180652719:vpc/vpc-0e9099a6c22412c6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0816ad7d34c8eb463",
            "default_route_table_id": "rtb-014d2ddf3cdce466f",
            "default_security_group_id": "sg-09026f66b39912d43",
            "dhcp_options_id": "dopt-0bc5d0c25274b7a4e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e9099a6c22412c6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014d2ddf3cdce466f",
            "owner_id": "507180652719",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          }
        }
      ]
    }
  ]
}